# brood

./: .gitignore  Anchor.toml  Cargo.toml  README.md  index.html
.github/workflows/: build.yml  pages.yml
dashboard/: index.html
data/: state.json  trades.json
programs/brood/: Cargo.toml
programs/brood/src/: lib.rs
schema/: example-genome.json  genome.schema.json
sdk/: package-lock.json  package.json
sdk/src/: do-spawn.ts  index.ts  multi-spawn.ts  spawn-gen3.ts  spawn-test.ts  test.ts  tree.ts
simulator/: package-lock.json  package.json  push-state.sh
simulator/data/: evolution-state.json  state.json  trades.json
simulator/data/genomes/: Adam-gen1.json  Eve-gen1.json  Lilith-gen1.json
simulator/src/: evolution-v2.ts  evolve.ts  evolved-strategy.ts  genome.ts  live-evolve.ts  market.ts  simulate.ts  strategy.ts  types.ts
