[package]
name = "brood"
version = "0.1.0"
description = "Evolving AI Agents on Solana"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "lib"]
name = "brood"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
